<resources>
    <string name="app_name">个人-组件</string>
    <string name="login_hint_input_pwd">输入验证码</string>
    <string name="login_hint_input_phone">请输入手机号</string>
    <string name="request_validate_code">获取验证码</string>
    <string name="login">登陆</string>
    <string name="register_now">立即注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="error_empty_info">请输入正确的账号或密码</string>
    <string name="error_empty_account">请输入手机号</string>
    <string name="error_re_phone">请输入正确的手机号</string>

</resources>
