<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.mobile_core.module_personal.main.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/size_12dp"
            tools:context="com.mobile_core.module_personal.main.LoginActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_input_phone"
                    android:singleLine="true"
                    android:text="@{viewModel.account}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/reqCode"
                app:layout_constraintTop_toBottomOf="@+id/til_account"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_input_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@{viewModel.password}" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/reqCode"
                android:layout_width="@dimen/size_90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/selector_validate_bg"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onReqCodeClick()}"
                android:text="@string/request_validate_code"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/til_pwd"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/til_pwd" />

            <TextView
                android:id="@+id/registerNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onRegisterClick()}"
                android:text="@string/register_now"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_pwd" />

            <TextView
                android:id="@+id/forgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onForgetPwdClick()}"
                android:text="@string/forget_pwd"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_pwd" />

            <Button
                android:id="@+id/loginBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_18dp"
                android:background="@drawable/shape_login_bt"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerNow" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/socialLoginRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintTop_toBottomOf="@+id/loginBt" />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</layout>
